--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: ふじえもん's homepage
 description: There are fujiemon's product,slides
+ｐermalink: /fujiemon/top.html
